[gd_scene load_steps=6 format=3 uid="uid://ckn83dish55px"]

[ext_resource type="Script" path="res://menu.gd" id="1_55itb"]
[ext_resource type="Texture2D" uid="uid://thdytcep2hap" path="res://Platformer - desert/Background/BG-sky.png" id="2_comol"]
[ext_resource type="Texture2D" uid="uid://dcovuoy37e3ed" path="res://Platformer - desert/Background/BG-mountains.png" id="3_ghneu"]
[ext_resource type="Texture2D" uid="uid://boqyc1x0ysn28" path="res://Platformer - desert/Background/BG-ruins.png" id="4_2khed"]
[ext_resource type="Texture2D" uid="uid://d01jhkbxiq01v" path="res://Platformer - desert/Background/BG-sun.png" id="5_fde5q"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_55itb")

[node name="Bg-sky" type="Sprite2D" parent="."]
position = Vector2(576.5, 324)
scale = Vector2(4.49609, 2.53125)
texture = ExtResource("2_comol")

[node name="Bg-mountains6" type="Sprite2D" parent="Bg-sky"]
position = Vector2(-80.1807, 34.7654)
scale = Vector2(0.222415, 0.395062)
texture = ExtResource("3_ghneu")

[node name="Bg-mountains7" type="Sprite2D" parent="Bg-sky"]
position = Vector2(-55.0478, 32.3951)
scale = Vector2(0.222415, 0.395062)
texture = ExtResource("3_ghneu")

[node name="Bg-mountains" type="Sprite2D" parent="."]
position = Vector2(129, 408)
texture = ExtResource("3_ghneu")

[node name="Bg-mountains2" type="Sprite2D" parent="."]
position = Vector2(383, 405)
texture = ExtResource("3_ghneu")

[node name="Bg-mountains3" type="Sprite2D" parent="."]
position = Vector2(637, 405)
texture = ExtResource("3_ghneu")

[node name="Bg-ruins" type="Sprite2D" parent="."]
position = Vector2(129, 412)
texture = ExtResource("4_2khed")

[node name="Bg-ruins2" type="Sprite2D" parent="."]
position = Vector2(384, 412)
texture = ExtResource("4_2khed")

[node name="Bg-ruins3" type="Sprite2D" parent="."]
position = Vector2(639, 412)
texture = ExtResource("4_2khed")

[node name="Bg-sun" type="Sprite2D" parent="."]
position = Vector2(704, 267)
texture = ExtResource("5_fde5q")

[node name="Bg-mountains4" type="Sprite2D" parent="."]
position = Vector2(891, 403)
texture = ExtResource("3_ghneu")

[node name="Bg-ruins4" type="Sprite2D" parent="."]
position = Vector2(891, 412)
texture = ExtResource("4_2khed")

[node name="Bg-mountains5" type="Sprite2D" parent="."]
position = Vector2(1147, 404)
texture = ExtResource("3_ghneu")

[node name="Bg-ruins5" type="Sprite2D" parent="."]
position = Vector2(1147, 411)
texture = ExtResource("4_2khed")

[node name="Bg-ruins6" type="Sprite2D" parent="."]
position = Vector2(1146, 412)
texture = ExtResource("4_2khed")

[node name="Bg-ruins7" type="Sprite2D" parent="."]
position = Vector2(888, 411)
texture = ExtResource("4_2khed")

[node name="Bg-ruins8" type="Sprite2D" parent="."]
position = Vector2(171, 442)
texture = ExtResource("4_2khed")

[node name="Bg-ruins9" type="Sprite2D" parent="."]
position = Vector2(412, 439)
texture = ExtResource("4_2khed")

[node name="Bg-ruins10" type="Sprite2D" parent="."]
position = Vector2(128, 441)
texture = ExtResource("4_2khed")

[node name="Bg-ruins11" type="Sprite2D" parent="."]
position = Vector2(666, 439)
texture = ExtResource("4_2khed")

[node name="Bg-ruins12" type="Sprite2D" parent="."]
position = Vector2(922, 439)
texture = ExtResource("4_2khed")

[node name="Bg-ruins13" type="Sprite2D" parent="."]
position = Vector2(1131, 439)
texture = ExtResource("4_2khed")

[node name="Bg-ruins14" type="Sprite2D" parent="."]
position = Vector2(128, 512)
texture = ExtResource("4_2khed")

[node name="Bg-ruins15" type="Sprite2D" parent="."]
position = Vector2(384, 512)
texture = ExtResource("4_2khed")

[node name="Bg-ruins16" type="Sprite2D" parent="."]
position = Vector2(640, 513)
texture = ExtResource("4_2khed")

[node name="Bg-ruins17" type="Sprite2D" parent="."]
position = Vector2(893, 511)
texture = ExtResource("4_2khed")

[node name="Bg-ruins18" type="Sprite2D" parent="."]
position = Vector2(1105, 508)
texture = ExtResource("4_2khed")

[node name="Bg-ruins19" type="Sprite2D" parent="."]
position = Vector2(1089, 574)
texture = ExtResource("4_2khed")

[node name="Bg-ruins20" type="Sprite2D" parent="."]
position = Vector2(931, 583)
texture = ExtResource("4_2khed")

[node name="Bg-ruins21" type="Sprite2D" parent="."]
position = Vector2(486.5, 574)
scale = Vector2(3.83203, 1.07031)
texture = ExtResource("4_2khed")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.83179
anchor_right = 1.02394
anchor_bottom = 1.86541
offset_right = -320.576
offset_bottom = -175.784
metadata/_edit_use_anchors_ = true

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="OptionsButtion" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButtion" to="." method="_on_options_buttion_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
